--- a/boot/test.html
+++ b/boot/test.html
@@ -11,10 +11,15 @@
 </head>
 <body>
 	<header>
-		<nav id="header-nav" class="navbar navbar default"></nav>
+		<nav id="header-nav" class="navbar navbar default">
 		<div class="container">
-			<div class=""></div>
+			<div class="navbar-header">
+				<a href="index.html" class="">
+					<div id="logo-img"></div>
+				</a>
+			</div>
 		</div>
+	</nav>
 	</header>
 
 </body>
